--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,11 +83,10 @@ jobs:
           override: true
 
       - uses: actions-rs/cargo@v1
-        env:
           CRATE_NAME: ${{ steps.set_crate_name.outputs.CRATE_NAME }}
         with:
           command: check
-          args: --manifest-path $CRATE_NAME/Cargo.toml --bin $CRATE_NAME --locked
+          args: --manifest-path ${{ steps.set_crate_name.outputs.CRATE_NAME }}/Cargo.toml --bin ${{ steps.set_crate_name.outputs.CRATE_NAME }} --locked
 
   release:
     if: startsWith(github.ref, 'refs/tags/v')
