--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,6 @@ anyhow = "1"
 directories = "3"
 confy = { git = "https://github.com/rust-cli/confy", default-features = false, features = ["yaml_conf"] }
 log = "0.4"
-pretty_env_logger = "0.4"
+fern = { version = "0.6", features = ["colored"] }
+clap = "2.33"
+chrono = "0.4"
