--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --manifest-path ${{ steps.set_crate_name.outputs.CRATE_NAME }}/Cargo.toml --bin ${{ steps.set_crate_name.outputs.CRATE_NAME }} --locked
+          args: --bin ${{ steps.set_crate_name.outputs.CRATE_NAME }} --locked
 
   release:
     if: startsWith(github.ref, 'refs/tags/v')
@@ -143,7 +143,7 @@ jobs:
         with:
           use-cross: true
           command: build
-          args: --manifest-path $CRATE_NAME/Cargo.toml --bin $CRATE_NAME --release --locked
+          args: --bin $CRATE_NAME --release --locked
 
       - uses: svenstaro/upx-action@2.0.1
         with:
