--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ log = "0.4"
 fern = { version = "0.6", features = ["colored"] }
 clap = "2.33"
 chrono = "0.4"
+
+[profile.release]
+lto = true
+opt-level = "z"
