--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,9 @@ oauth2 = "3"
 regex = "1"
 serde_json = "1"
 serde = { version = "1.0", features = ["derive"] }
-reqwest = { version = "0.10", features = ["json"] }
+reqwest = { version = "0.10", features = ["blocking", "json"] }
 open = "1"
 url = "2"
-tokio = { version = "0.2.22", features = ["full"] }
 anyhow = "1"
 directories = "3"
 confy = { git = "https://github.com/rust-cli/confy", default-features = false, features = ["yaml_conf"] }
