Add args, desc and version for `clap`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "mendo"
 version = "0.1.0"
 authors = ["Rudo2204 <rudo2204@gmail.com>"]
 edition = "2018"
+description = "A CLI program to update manga progress"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
