--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ clap = "2.33"
 chrono = "0.4"
 yaml-rust = "0.4.4"
 serde_yaml = "0.8.13"
+xkcd_unreachable = "0.1.1"
 
 [profile.release]
 lto = true
