--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install Dbus
+        shell: bash
+        run: |
+          sudo apt install -y libdbus-1-dev
+
       - uses: actions/cache@v2
         with:
           path: |
@@ -55,6 +60,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install Dbus
+        shell: bash
+        run: |
+          sudo apt install -y libdbus-1-dev
 
       - uses: actions/cache@v2
         with:
@@ -96,6 +106,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install Dbus
+        if: matrix.os == 'ubuntu-latest'
+        shell: bash
+        run: |
+          sudo apt install -y libdbus-1-dev
 
       - uses: actions/cache@v2
         with:
