--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,16 @@ description = "A CLI program to update manga progress"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-oauth2 = "3"
+oauth2 = "4"
 regex = "1"
 serde_json = "1"
 serde = { version = "1.0", features = ["derive"] }
-reqwest = { version = "0.10", features = ["blocking", "json"] }
+reqwest = { version = "0.11.3", features = ["blocking", "json"] }
 open = "1"
 url = "2"
 anyhow = "1"
 directories = "3"
-confy = { git = "https://github.com/rust-cli/confy", default-features = false, features = ["yaml_conf"] }
+confy = { git = "https://github.com/rust-cli/confy.git", default-features = false, features = ["yaml_conf"] }
 log = "0.4"
 fern = { version = "0.6", features = ["colored"] }
 clap = "2.33"
